src/test/ui/deprecation/deprecation-sanity.stderr
error[E0541]: unknown meta item 'reason'
  --> $DIR/deprecation-sanity.rs:4:43
   |
LL |     #[deprecated(since = "a", note = "a", reason)]
   |                                           ^^^^^^ expected one of `since`, `note`

error[E0551]: incorrect meta item
  --> $DIR/deprecation-sanity.rs:7:31
   |
LL |     #[deprecated(since = "a", note)]
   |                               ^^^^

error[E0551]: incorrect meta item
  --> $DIR/deprecation-sanity.rs:10:18
   |
LL |     #[deprecated(since, note = "a")]
   |                  ^^^^^

error[E0551]: incorrect meta item
  --> $DIR/deprecation-sanity.rs:13:31
   |
LL |     #[deprecated(since = "a", note(b))]
   |                               ^^^^^^^

error[E0551]: incorrect meta item
  --> $DIR/deprecation-sanity.rs:16:18
   |
LL |     #[deprecated(since(b), note = "a")]
   |                  ^^^^^^^^

error[E0565]: literal in `deprecated` value must be a string
  --> $DIR/deprecation-sanity.rs:19:25
   |
LL |     #[deprecated(note = b"test")]
   |                         ^^^^^^^ help: consider removing the prefix: `"test"`

error[E0565]: item in `deprecated` must be a key/value pair
  --> $DIR/deprecation-sanity.rs:22:18
   |
LL |     #[deprecated("test")]
   |                  ^^^^^^

error[E0550]: multiple deprecated attributes
  --> $DIR/deprecation-sanity.rs:28:1
   |
LL | fn multiple1() { }
   | ^^^^^^^^^^^^^^^^^^

error[E0538]: multiple 'since' items
  --> $DIR/deprecation-sanity.rs:30:27
   |
LL | #[deprecated(since = "a", since = "b", note = "c")]
   |                           ^^^^^^^^^^^

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0538, E0541, E0565.
For more information about an error, try `rustc --explain E0538`.
